[nosetests]
verbosity = 2
detailed-errors = 1
with-doctest = 1
with-coverage = 1
where = weboob
tests = weboob.tools.capabilities.bank.iban,
        weboob.tools.capabilities.bank.transactions,
        weboob.tools.capabilities.paste,
        weboob.tools.application.formatters.json,
        weboob.tools.application.formatters.table,
        weboob.tools.date,
        weboob.tools.misc,
        weboob.tools.path,
        weboob.tools.tokenizer,
        weboob.browser.browsers,
        weboob.browser.pages,
        weboob.browser.filters.standard,
        weboob.browser.tests.form,
        weboob.browser.tests.filters,
        weboob.browser.tests.url

[isort]
known_first_party = weboob
line_length = 120

[flake8]
max-line-length = 120
exclude = dist,*.egg-info,build,.git,__pycache__,boilerplate_data,stable_backport_data,*_ui.py

[easy_install]

[sdist]
owner = root
group = root

[bdist]
owner = root
group = root

[bdist_wheel]
owner = root
group = root
universal = 1

[metadata]
name = weboob
# TODO fetch from __init__.py
version = 2.1

description = Weboob, Web Outside Of Browsers
long_description = file:README.md

author = Romain Bignon
author_email = weboob@weboob.org
maintainer = Romain Bignon
maintainer_email = romain@weboob.org

url = https://weboob.org/
license = GNU LGPL 3

classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python
    Topic :: Communications :: Email
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML

[options]
python_requires = >= 3.5

install_requires =
    lxml
    cssselect
    requests>=2.0.0
    python-dateutil
    PyYAML
    html2text>=3.200
    six
    unidecode
    Pillow
    Babel

tests_require =
    flake8
    nose
    xunitparser
    coverage

# TODO [options.data_files]

[options.entry_points]
console_scripts =
    boobands = weboob.applications.boobands:Boobands.run
    boobank = weboob.applications.boobank:Boobank.run
    boobathon = weboob.applications.boobathon:Boobathon.run
    boobcoming = weboob.applications.boobcoming:Boobcoming.run
    boobill = weboob.applications.boobill:Boobill.run
    booblyrics = weboob.applications.booblyrics:Booblyrics.run
    boobmsg = weboob.applications.boobmsg:Boobmsg.run
    boobooks = weboob.applications.boobooks:Boobooks.run
    boobsize = weboob.applications.boobsize:Boobsize.run
    boobtracker = weboob.applications.boobtracker:BoobTracker.run
    boomoney = weboob.applications.boomoney:Boomoney.run
    boorpg = weboob.applications.boorpg:BooRPG.run
    cineoob = weboob.applications.cineoob:Cineoob.run
    comparoob = weboob.applications.comparoob:Comparoob.run
    cookboob = weboob.applications.cookboob:Cookboob.run
    flatboob = weboob.applications.flatboob:Flatboob.run
    galleroob = weboob.applications.galleroob:Galleroob.run
    geolooc = weboob.applications.geolooc:Geolooc.run
    handjoob = weboob.applications.handjoob:Handjoob.run
    havedate = weboob.applications.havedate:HaveDate.run
    monboob = weboob.applications.monboob:Monboob.run
    parceloob = weboob.applications.parceloob:Parceloob.run
    pastoob = weboob.applications.pastoob:Pastoob.run
    radioob = weboob.applications.radioob:Radioob.run
    shopoob = weboob.applications.shopoob:Shopoob.run
    suboob = weboob.applications.suboob:Suboob.run
    translaboob = weboob.applications.translaboob:Translaboob.run
    traveloob = weboob.applications.traveloob:Traveloob.run
    videoob = weboob.applications.videoob:Videoob.run
    webcontentedit = weboob.applications.webcontentedit:WebContentEdit.run
    weboob-cli = weboob.applications.weboobcli:WeboobCli.run
    weboob-config = weboob.applications.weboobcfg:WeboobCfg.run
    weboob-debug = weboob.applications.weboobdebug:WeboobDebug.run
    weboob-repos = weboob.applications.weboobrepos:WeboobRepos.run
    weboorrents = weboob.applications.weboorrents:Weboorrents.run
    wetboobs = weboob.applications.wetboobs:WetBoobs.run
    weboob = weboob.applications.weboobmain:WeboobMain.run
